# oauth-kit

./: CLAUDE.md  Cargo.toml  LICENSE  README.md
examples/: basic.rs
src/: error.rs  lib.rs  store.rs  user.rs
src/axum/: extractors.rs  handlers.rs  mod.rs  router.rs
src/provider/: mod.rs  oauth2_provider.rs  oidc.rs  providers.rs
